source/main/resources/style.css
/*
 * This style sheet is intentionally coded to refer to the modena.css properties
 */

.root {
	/* Base colors can be overridden here */
	/* -fx-base: rgba( 63, 60, 65, 255 ); /* dark */
	/* -fx-base: rgba( 236, 236, 236, 1 ); /* light */
	/* -fx-background: rgba( 241, 241, 241, 0.2 ); */

	/* Program colors */
	-ex-background-text: rgba( 241, 241, 241, 0.2 );
	-ex-background-tabs: rgba( 241, 241, 241, 0.4 );
}

.splashscreen-progress {
	-fx-arc-height: 10;
	-fx-arc-width: 5;
}

.splashscreen-progress-tray {
	-fx-fill: dimgray;
}

.splashscreen-progress-incomplete {
	-fx-fill: lightgray;
}

.splashscreen-progress-complete {
	-fx-fill: derive( -fx-accent, 50% );
}

#menu-development > .label {
	-fx-text-fill: red;
	-fx-font-weight: 700;
}
#menu-development:hover > .label {
	-fx-text-fill: -fx-text-background-color;
}
#menu-development {
	-fx-background-color: transparent;
}
#menu-development:hover  {
	-fx-background-color: red;
}

.prompt {
	-fx-padding: 0 1mm 0 0;
}

.padded {
	-fx-padding: 1.5mm;
}

/* ScrollPane */
.workpane .scroll-pane {
	-fx-background-color: transparent;
}

.workpane .scroll-pane .viewport{
	-fx-background-color: transparent;
}

.workpane .scroll-pane .content{
	-fx-background-color: transparent;
}

/* Workpane */
.workpane {
	-fx-background-color: transparent;
}

.workpane-view {
	-fx-background-color: transparent;
}

.workpane-edge {
	-fx-focus-traversable: false;
	-fx-background-color: -ex-background-tabs
}

.workpane-edge:horizontal {
	-fx-cursor: v-resize;
}

.workpane-edge:vertical {
	-fx-cursor: h-resize;
}

.workpane .tab-pane .tab-header-background {
	-fx-background-color: -ex-background-tabs
}

/* Workspace */
.workspace {
	/* Will override the user preference background */
	/*-fx-background-color: #80a0c0ff;*/
}

/* Tools */
.tool {
	-fx-background-color: -ex-background-text
}

.tool .tree-view {
	/*-fx-background-color: -ex-background-text;*/
	-fx-background-color: transparent;
}

.tool .tree-cell {
	-fx-indent: 1em;
	-fx-background-color: transparent;
}

.tool .tree-view:focused > .virtual-flow > .clipped-container > .sheet > .tree-cell:filled:selected {
	-fx-background: -fx-selection-bar;
	-fx-table-cell-border-color: derive(-fx-selection-bar, 20%);
}

.tool .tree-cell:filled:selected {
	-fx-background-color: -fx-background, -fx-cell-focus-inner-border, -fx-background;
}

.tool .tree-view:focused > .virtual-flow > .clipped-container > .sheet > .tree-cell:focused {
	-fx-background-color: -fx-background, -fx-cell-focus-inner-border, -fx-background;
}

/*
.tool .text-area {
	-fx-background-color: -ex-background-text;
	-fx-background-radius: 0 0 0 0;
}

.tool .text-field {
	-fx-background-color: -ex-background-text;
	-fx-background-radius: 0 0 0 0;
}
*/

.accent {
	-fx-fill: -fx-background;
	-fx-opacity: 0.3;
}

.status-bar {
	-fx-padding: 1mm 1mm 1mm 1mm;
}

.status-bar > .box {
	-fx-spacing: 1mm;
}

.memory-monitor {}

.memory-monitor-label {
	-fx-padding: 0.5mm 1mm 0.5mm 1mm;
}

.memory-monitor-max {
	-fx-fill: #e0e0e0;
}

.memory-monitor-allocated {
	-fx-fill: #c0c0c0;
}

.memory-monitor-used {
	-fx-fill: -fx-accent;
}

.notice {
	-fx-background-color: -ex-background-text;
	-fx-pref-width: 8cm;
}

.notice-title {
	-fx-font-weight: bold;
}

.notice-buttons {
	-fx-background-color: -ex-background-text;
}

.notice-message {
	-fx-font-weight: normal;
}

.task-monitor {}

.task-monitor-label {
	-fx-padding: 0.5mm 1mm 0.5mm 1mm;
}

.task-monitor-max {
	-fx-fill: #e0e0e0;
}

.task-monitor-threads {
	-fx-fill: #c0c0c0;
}

.task-monitor-tasks {
	-fx-fill: derive( -fx-accent, 80% );
}

.task-monitor-progress {
	-fx-fill: -fx-accent;
}

#tool-about .text-area {
	-fx-background-color: transparent;
}

#tool-about .label {
	-fx-padding: -0.25em;
}

#tool-about .tool-about-title {
	-fx-font-size: 5em;
}

#tool-about .tool-about-name {
	-fx-font-size: 2em;
}

#tool-about .tool-about-provider {
	-fx-font-size: 1em;
}

#tool-about .tool-about-version {
	-fx-font-size: 1em;
}

#tool-product-page-header {
	-fx-background-insets: 0 0 1mm 0;
	-fx-background-color: -ex-background-text;
	-fx-padding: 1mm 1mm 2mm 1mm;
}

#tool-product-page-title {
	-fx-font-size: 2em;
}

#tool-product-page-header-buttons {
	-fx-spacing: 1mm;
}

#tool-product-artifact {
	-fx-background-color: -ex-background-text;
	-fx-padding: 1mm;
}

#tool-product-artifact-name {
	-fx-font-weight: bold;
}

#tool-product-market {
	-fx-background-color: -ex-background-text;
	-fx-padding: 1mm;
}

#tool-product-market-name {
	-fx-font-weight: bold;
}

#tool-product-page-footer {
	-fx-background-insets: 1mm 0 0 0;
	-fx-background-color: -ex-background-text;
	-fx-padding: 2mm 1mm 1mm 1mm;
}

#tool-welcome {
	-fx-background-color: transparent;
}

#tool-welcome .tool-welcome-title {
	-fx-font-size: 5em;
}

/* TitledPane */
.titled-pane > *.content {
	-fx-background-color: red;
}

